# INSTALL_RPATH_USE_LINK_PATH-demo

./: .gitignore  README.md
project-a/: CMakeLists.txt  CMakePresets.json  ProjectAConfig.cmake.in
project-a/src/: a.cpp
